--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
   <body>
    
     <div id="root"></div>
+    <script type="text/html" src="/src/index.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
